// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workday Randomly generated records from customreports v4 stream with Terminated 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 323 records",
  "Would write records by model: {\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":102,\\\\\\"org_Employee\\\\\\":102,\\\\\\"org_Team\\\\\\":13,\\\\\\"org_TeamMembership\\\\\\":102}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday Saved and Ignored structured generated records v4 stream 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 263 records",
  "Would write records by model: {\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":83,\\\\\\"org_Employee\\\\\\":83,\\\\\\"org_Team\\\\\\":10,\\\\\\"org_TeamMembership\\\\\\":83}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday Saved and Ignored structured generated records v4 stream 2`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 263 records",
  "Would write records by model: {\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":83,\\\\\\"org_Employee\\\\\\":83,\\\\\\"org_Team\\\\\\":10,\\\\\\"org_TeamMembership\\\\\\":83}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday check resulting org structure from "empty" input 1`] = `
Object {
  "all_teams": "all_teams",
}
`;

exports[`workday process randomly generated records from customreports v3 stream 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 314 records",
  "Would write records by model: {\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":102,\\\\\\"org_Employee\\\\\\":102,\\\\\\"org_Team\\\\\\":4,\\\\\\"org_TeamMembership\\\\\\":102}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process records from customreports v1 stream accept all 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 13 records",
  "Would write records by model: {\\\\\\"geo_Location\\\\\\":2,\\\\\\"identity_Identity\\\\\\":3,\\\\\\"org_Employee\\\\\\":3,\\\\\\"org_Team\\\\\\":2,\\\\\\"org_TeamMembership\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process records from customreports v1 stream reject all 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 0 records",
  "Would write records by model: {}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process structured generated records from customreports v4 stream 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 320 records",
  "Would write records by model: {\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":101,\\\\\\"org_Employee\\\\\\":101,\\\\\\"org_Team\\\\\\":13,\\\\\\"org_TeamMembership\\\\\\":101}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;
